Final commit Sunday

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,16 @@
     "app/api/**/*": {
       "maxDuration": 60
     }
-  }
+  },
+  "routes": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ]
 }
