--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   },
   "routes": [
     {
-      "source": "/api/(.*)",
+      "src": "/api/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
